keeps working on the map.

--- a/data/mods/Mythos-Island/alaska_region_settings.json
+++ b/data/mods/Mythos-Island/alaska_region_settings.json
@@ -63,128 +63,18 @@
           "t_shrub_raspberry": 4,
           "t_shrub_grape": 4,
           "t_shrub_blackberry": 2,
-          "t_shrub_huckleberry": 2,
-          "t_shrub_peanut": 1
+          "t_shrub_huckleberry": 2
         },
         "t_region_shrub_decorative": { "t_shrub": 30, "t_fern": 5, "t_shrub_rose": 20, "t_shrub_hydrangea": 20, "t_shrub_lilac": 20, "t_bamboo_long": 5 },
         "t_region_shrub": { "t_region_shrub_decorative": 60, "t_underbrush": 10, "t_region_shrub_fruit": 30 },
-        "t_region_tree_forest_dense": {
-          "t_tree": 18,
-          "t_tree_blackjack": 10,
-          "t_tree_hickory": 18,
-          "t_tree_pine": 9,
-          "t_tree_maple": 7,
-          "t_tree_birch": 7,
-          "t_tree_beech": 7,
-          "t_tree_cottonwood": 4,
-          "t_tree_elm": 4,
-          "t_tree_cherry": 4,
-          "t_tree_plum": 2,
-          "t_tree_sassafras": 1,
-          "t_region_tree_dead": 5,
-          "t_region_tree_forest_other": 5
-        },
-        "t_region_tree_forest_other": {
-          "t_tree_willow": 15,
-          "t_tree_alder": 15,
-          "t_tree_chestnut": 10,
-          "t_tree_basswood": 10,
-          "t_tree_hazelnut": 10,
-          "t_tree_crabapple": 8,
-          "t_tree_apple": 2,
-          "t_tree_coffee": 1,
-          "t_tree_apricot": 2,
-          "t_tree_peach": 1,
-          "t_tree_pear": 1,
-          "t_tree_elderberry": 10,
-          "t_tree_mulberry": 10,
-          "t_tree_sassafras": 2,
-          "t_tree_juniper": 5
-        },
+        "t_region_tree_forest_dense": { "t_region_tree_dead": 5, "t_region_tree_forest_other": 5 },
+        "t_region_tree_forest_other": { "t_tree_willow": 15, "t_tree_alder": 15 },
         "t_region_tree_forest": { "t_region_tree_forest_dense": 2, "t_region_tree_forest_other": 1 },
-        "t_region_tree": {
-          "t_tree": 128,
-          "t_tree_young": 128,
-          "t_tree_birch": 16,
-          "t_tree_elm": 16,
-          "t_tree_cottonwood": 16,
-          "t_tree_basswood": 16,
-          "t_tree_alder": 16,
-          "t_tree_pine": 32,
-          "t_tree_maple": 32,
-          "t_tree_willow": 32,
-          "t_tree_hickory": 16,
-          "t_tree_walnut": 8,
-          "t_tree_butternut": 4,
-          "t_tree_chestnut": 8,
-          "t_tree_hazelnut": 2,
-          "t_tree_beech": 2,
-          "t_tree_blackjack": 8,
-          "t_tree_coffee": 2,
-          "t_tree_crabapple": 2,
-          "t_tree_apple": 1,
-          "t_tree_apricot": 1,
-          "t_tree_cherry": 1,
-          "t_tree_juniper": 2,
-          "t_tree_peach": 1,
-          "t_tree_pear": 1,
-          "t_tree_plum": 1,
-          "t_tree_elderberry": 2,
-          "t_tree_mulberry": 2,
-          "t_tree_sassafras": 3,
-          "t_region_tree_dead": 48
-        },
-        "t_region_tree_shade": {
-          "t_tree": 64,
-          "t_tree_young": 32,
-          "t_tree_birch": 16,
-          "t_tree_elm": 16,
-          "t_tree_cottonwood": 16,
-          "t_tree_basswood": 16,
-          "t_tree_alder": 16,
-          "t_tree_maple": 32,
-          "t_tree_willow": 32,
-          "t_tree_hickory": 16,
-          "t_tree_chestnut": 8,
-          "t_tree_blackjack": 8,
-          "t_tree_coffee": 2,
-          "t_tree_elderberry": 2,
-          "t_tree_mulberry": 2,
-          "t_tree_sassafras": 3,
-          "t_tree_dead": 2
-        },
-        "t_region_tree_fruit": {
-          "t_tree_young": 4,
-          "t_tree_apple": 2,
-          "t_tree_crabapple": 1,
-          "t_tree_apricot": 2,
-          "t_tree_cherry": 2,
-          "t_tree_peach": 2,
-          "t_tree_pear": 2,
-          "t_tree_plum": 2,
-          "t_tree_elderberry": 2,
-          "t_tree_mulberry": 2,
-          "t_tree_dead": 4
-        },
-        "t_region_tree_dead": {
-          "t_tree_hickory_dead": 8,
-          "t_tree_dead": 7,
-          "t_tree_dead_warped": 1,
-          "t_tree_deadpine": 3,
-          "t_tree_deadpine_warped": 1
-        },
-        "t_region_tree_nut": {
-          "t_tree_hickory": 16,
-          "t_tree_hickory_dead": 16,
-          "t_tree_walnut": 8,
-          "t_tree_butternut": 4,
-          "t_tree_chestnut": 8,
-          "t_tree_young": 4,
-          "t_tree_beech": 2,
-          "t_tree_hazelnut": 2,
-          "t_tree_coffee": 2,
-          "t_tree_dead": 4
-        },
+        "t_region_tree": { "t_tree_alder": 16, "t_tree_willow": 32, "t_region_tree_dead": 48 },
+        "t_region_tree_shade": { "t_tree_alder": 16, "t_tree_willow": 32, "t_tree_dead": 2 },
+        "t_region_tree_fruit": { "t_tree_dead": 4 },
+        "t_region_tree_dead": { "t_tree_dead": 7, "t_tree_dead_warped": 1 },
+        "t_region_tree_nut": { "t_tree_dead": 4 },
         "t_region_tree_evergreen": { "t_tree_pine": 32, "t_tree_juniper": 16, "t_tree_deadpine": 2 }
       },
       "furniture": {
@@ -280,8 +170,8 @@
     },
     "river_scale": 1.0,
     "overmap_lake_settings": {
-      "noise_threshold_lake": 0.03,
-      "lake_size_min": 20,
+      "noise_threshold_lake": 0.2,
+      "lake_size_min": 15,
       "lake_depth": -5,
       "shore_extendable_overmap_terrain": [ "forest", "forest_thick", "forest_water", "field" ],
       "shore_extendable_overmap_terrain_aliases": [
@@ -292,7 +182,7 @@
       ]
     },
     "overmap_ocean_settings": {
-      "noise_threshold_ocean": 0.01,
+      "noise_threshold_ocean": 0.02,
       "ocean_size_min": 100,
       "ocean_depth": -9,
       "ocean_start_north": 1,
