--- a/data/mods/Mythos-Island/alaska_region_settings.json
+++ b/data/mods/Mythos-Island/alaska_region_settings.json
@@ -37,136 +37,47 @@
         "t_region_grass": { "t_grass": 1 },
         "t_region_soil": { "t_dirt": 1 },
         "t_region_shrub_forest_dense": {
-          "t_underbrush": 30,
-          "t_shrub": 10,
-          "t_fern": 5,
+          "t_underbrush": 25,
+          "t_shrub": 6,
           "t_shrub_blueberry": 2,
           "t_shrub_raspberry": 2,
-          "t_shrub_huckleberry": 2,
           "t_shrub_strawberry": 1,
-          "t_shrub_grape": 1
+          "t_shrub_rhododendron": 6
         },
         "t_region_shrub_forest": { "t_region_shrub_forest_dense": 60, "t_shrub_rose": 5, "t_shrub_blackberry": 5 },
-        "t_region_shrub_plains": {
-          "t_shrub": 10,
-          "t_shrub_blueberry": 2,
-          "t_shrub_blackberry": 2,
-          "t_shrub_rose": 2,
-          "t_shrub_huckleberry": 1,
-          "t_shrub_strawberry": 1,
-          "t_shrub_grape": 1
-        },
+        "t_region_shrub_plains": { "t_shrub": 6, "t_shrub_blueberry": 3, "t_shrub_strawberry": 1, "t_shrub_rhododendron": 6 },
         "t_region_shrub_swamp": { "t_fern": 2, "t_shrub_raspberry": 2, "t_shrub_blueberry": 2, "t_shrub_huckleberry": 1, "t_shrub_rose": 1 },
-        "t_region_shrub_fruit": {
-          "t_shrub_blueberry": 6,
-          "t_shrub_strawberry": 6,
-          "t_shrub_raspberry": 4,
-          "t_shrub_grape": 4,
-          "t_shrub_blackberry": 2,
-          "t_shrub_huckleberry": 2
-        },
+        "t_region_shrub_fruit": { "t_shrub_blueberry": 6, "t_shrub_strawberry": 6, "t_shrub_raspberry": 4 },
         "t_region_shrub_decorative": { "t_shrub": 30, "t_fern": 5, "t_shrub_rose": 20, "t_shrub_hydrangea": 20, "t_shrub_lilac": 20, "t_bamboo_long": 5 },
         "t_region_shrub": { "t_region_shrub_decorative": 60, "t_underbrush": 10, "t_region_shrub_fruit": 30 },
-        "t_region_tree_forest_dense": { "t_region_tree_dead": 5, "t_region_tree_forest_other": 5 },
-        "t_region_tree_forest_other": { "t_tree_willow": 15, "t_tree_alder": 15 },
+        "t_region_tree_forest_dense": { "t_tree_alder_green": 5, "t_region_tree_forest_other": 5 },
+        "t_region_tree_forest_other": { "t_tree_willow_arctic": 15, "t_tree_alder_green": 15 },
         "t_region_tree_forest": { "t_region_tree_forest_dense": 2, "t_region_tree_forest_other": 1 },
-        "t_region_tree": { "t_tree_alder": 16, "t_tree_willow": 32, "t_region_tree_dead": 48 },
-        "t_region_tree_shade": { "t_tree_alder": 16, "t_tree_willow": 32, "t_tree_dead": 2 },
+        "t_region_tree": { "t_tree_alder_green": 12, "t_tree_arctic_willow": 32, "t_region_tree_dead": 48 },
+        "t_region_tree_shade": { "t_tree_alder_green": 16, "t_tree_arctic_willow": 32, "t_tree_dead": 2 },
         "t_region_tree_fruit": { "t_tree_dead": 4 },
         "t_region_tree_dead": { "t_tree_dead": 7, "t_tree_dead_warped": 1 },
         "t_region_tree_nut": { "t_tree_dead": 4 },
-        "t_region_tree_evergreen": { "t_tree_pine": 32, "t_tree_juniper": 16, "t_tree_deadpine": 2 }
+        "t_region_tree_evergreen": { "t_tree_deadpine": 2 }
       },
       "furniture": {
-        "f_region_flower": {
-          "f_black_eyed_susan": 100,
-          "f_lily": 100,
-          "f_flower_tulip": 100,
-          "f_flower_spurge": 100,
-          "f_chamomile": 100,
-          "f_dandelion": 100,
-          "f_dahlia": 100,
-          "f_bluebell": 100,
-          "f_sunflower": 100
-        },
-        "f_region_flower_decorative": {
-          "f_lily": 4,
-          "f_flower_tulip": 4,
-          "f_black_eyed_susan": 3,
-          "f_bluebell": 2,
-          "f_maianthemum_stellatum": 2,
-          "f_fireweed": 1,
-          "f_flower_spurge": 1,
-          "f_dahlia": 1,
-          "f_salsify": 1,
-          "f_chicory": 1,
-          "f_sunflower": 1
-        },
-        "f_region_weed": {
-          "f_thistle": 400,
-          "f_dandelion": 400,
-          "f_burdock": 400,
-          "f_chamomile": 300,
-          "f_carrot_wild": 300,
-          "f_salsify": 300,
-          "f_datura": 300,
-          "f_japanese_knotweed": 300,
-          "f_bluebell": 200,
-          "f_dahlia": 100,
-          "f_lily": 100,
-          "f_sunflower": 100,
-          "f_mustard": 100
-        },
-        "f_region_plain": {
-          "f_dandelion": 600,
-          "f_flower_spurge": 400,
-          "f_chamomile": 400,
-          "f_carrot_wild": 300,
-          "f_salsify": 300,
-          "f_datura": 300,
-          "f_thistle": 300,
-          "f_japanese_knotweed": 200,
-          "f_dahlia": 200,
-          "f_maianthemum_stellatum": 200,
-          "f_mutpoppy": 200,
-          "f_black_eyed_susan": 100,
-          "f_flower_tulip": 100,
-          "f_mustard": 100,
-          "f_sunflower": 100,
-          "f_fireweed": 100,
-          "f_selfheal": 100,
-          "f_jerusalem_artichoke": 100,
-          "f_lily": 100,
-          "f_chicory": 100,
-          "f_dogbane": 30
-        },
-        "f_region_forest": {
-          "f_burdock": 2000,
-          "f_bluebell": 600,
-          "f_wild_sarsaparilla": 600,
-          "f_lily": 500,
-          "f_chamomile": 500,
-          "f_japanese_knotweed": 300,
-          "f_carrot_wild": 300,
-          "f_salsify": 300,
-          "f_dahlia": 200,
-          "f_mutpoppy": 100,
-          "f_maianthemum_stellatum": 100,
-          "f_wintergreen": 100,
-          "f_dogbane": 80
-        },
-        "f_region_forest_dense": {
-          "f_burdock": 2000,
-          "f_bluebell": 800,
-          "f_lily": 500,
-          "f_wild_sarsaparilla": 400,
-          "f_salsify": 300,
-          "f_wintergreen": 200,
-          "f_dogbane": 100
-        },
+        "f_region_flower": { "f_bluebell": 100, "f_sunflower": 100 },
+        "f_region_flower_decorative": { "f_bluebell": 2, "f_fireweed": 1, "f_sunflower": 1 },
+        "f_region_weed": { "f_thistle": 400, "f_bluebell": 200 },
+        "f_region_plain": { "f_thistle": 300, "f_fireweed": 100, "f_dogbane": 30 },
+        "f_region_forest": { "f_bluebell": 600, "f_wintergreen": 100, "f_dogbane": 80 },
+        "f_region_forest_dense": { "f_bluebell": 800, "f_wintergreen": 200, "f_dogbane": 100 },
         "f_region_forest_water": { "f_burdock": 4, "f_purple_loosestrife": 3, "f_japanese_knotweed": 2, "f_lily": 1 },
         "f_region_water_plant": { "f_cattails": 15, "f_purple_loosestrife": 10, "f_wild_rice": 1, "f_lilypad": 1, "f_lotus": 5 }
       }
+    },
+    "overmap_connection_settings": {
+      "intra_city_road_connection": "local_road",
+      "inter_city_road_connection": "local_road",
+      "trail_connection": "forest_trail",
+      "sewer_connection": "sewer_tunnel",
+      "subway_connection": "subway_tunnel",
+      "rail_connection": "local_railroad"
     },
     "river_scale": 1.0,
     "overmap_lake_settings": {
